<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tv"
        android:enabled="true"
        android:icon="@drawable/ic_television"
        android:title="@string/tv"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_people"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        android:title="@string/people"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />
</menu>