<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_10"
    android:layout_marginTop="@dimen/itemBetweenMarginMedium"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/itemBetweenMarginMedium">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/media"
            android:text="@string/media"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_margin="@dimen/itemBetweenMargin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clVideo"
            app:layout_constraintTop_toBottomOf="@id/media"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/video"
                android:text="@string/video"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/allVideo"
                app:layout_constraintBottom_toTopOf="@id/rvVideo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/allVideo"
                android:text="@string/view_all_videos"
                android:textSize="13sp"
                android:textColor="@color/blue_500"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/video"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rvVideo"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvVideo"
                app:layout_constraintTop_toBottomOf="@id/video"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clBackdrops"
            app:layout_constraintTop_toBottomOf="@id/clVideo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/backdrops"
                android:text="@string/backdrops"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/allBackdrops"
                app:layout_constraintBottom_toTopOf="@id/rvBackdrops"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/allBackdrops"
                android:text="@string/view_all_backdrops"
                android:textSize="13sp"
                android:textColor="@color/blue_500"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/backdrops"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rvBackdrops"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvBackdrops"
                app:layout_constraintTop_toBottomOf="@id/backdrops"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clPosters"
            app:layout_constraintTop_toBottomOf="@id/clBackdrops"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/posters"
                android:text="@string/posters"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/allPosters"
                app:layout_constraintBottom_toTopOf="@id/rvPosters"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/allPosters"
                android:text="@string/view_all_posters"
                android:textSize="13sp"
                android:textColor="@color/blue_500"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/posters"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rvPosters"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvPosters"
                app:layout_constraintTop_toBottomOf="@id/posters"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>