<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    tools:ignore="ContentDescription">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        app:cardCornerRadius="@dimen/padding_10"
        android:layout_marginTop="@dimen/activityVerticalMargin_big"
        android:layout_marginBottom="@dimen/activityVerticalMargin_big"
        android:layout_marginStart="@dimen/activityVerticalMargin_big"
        android:layout_marginEnd="@dimen/activityVerticalMargin_big"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_no_internet"
                android:layout_gravity="center"
                android:layout_margin="@dimen/itemBetweenMarginMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:text="@string/no_internet"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="normal"
                android:textSize="14sp"
                android:text="@string/body_internet"/>

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ok"
                android:layout_margin="20dp"
                android:textColor="@color/colorBlack"
                android:background="@drawable/onboarding_button"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>