<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_10"
    android:id="@+id/viewInfo"
    app:cardBackgroundColor="@color/background"
    android:layout_marginTop="@dimen/itemBetweenMarginMedium"
    tools:ignore="ContentDescription">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/itemBetweenMarginMedium">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clSosmed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <ImageView
                android:layout_width="@dimen/height_icon"
                android:layout_height="@dimen/height_icon"
                android:id="@+id/facebook"
                android:layout_margin="@dimen/padding_10"
                android:src="@drawable/ic_facebook"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/twitter"/>
            <ImageView
                android:layout_width="@dimen/height_icon"
                android:layout_height="@dimen/height_icon"
                android:id="@+id/twitter"
                android:layout_margin="@dimen/padding_10"
                android:src="@drawable/ic_twitter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/facebook"
                app:layout_constraintRight_toLeftOf="@id/instagram"/>
            <ImageView
                android:layout_width="@dimen/height_icon"
                android:layout_height="@dimen/height_icon"
                android:id="@+id/instagram"
                android:layout_margin="@dimen/padding_10"
                android:src="@drawable/ic_instagram"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/twitter"
                app:layout_constraintRight_toLeftOf="@id/link"/>
            <ImageView
                android:layout_width="@dimen/height_icon"
                android:layout_height="@dimen/height_icon"
                android:id="@+id/link"
                android:layout_margin="@dimen/padding_10"
                android:src="@drawable/ic_link"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/instagram"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info"
            android:text="@string/personal_info"
            android:textSize="20sp"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold"
            android:layout_margin="@dimen/itemBetweenMargin"
            app:layout_constraintTop_toBottomOf="@id/clSosmed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clKnownFor"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/knownFor"
                android:text="@string/known_for"
                android:textSize="16sp"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKnownFor"
                android:textSize="16sp"
                android:textColor="@color/textColorSecondary"
                android:layout_marginStart="@dimen/itemBetweenMarginMedium"
                android:layout_marginEnd="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toBottomOf="@id/knownFor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clKnownCredits"
            app:layout_constraintTop_toBottomOf="@id/clKnownFor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/KnownCredits"
                android:text="@string/known_credits"
                android:textSize="16sp"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKnownCredits"
                android:textSize="16sp"
                android:textColor="@color/textColorSecondary"
                android:layout_marginStart="@dimen/itemBetweenMarginMedium"
                android:layout_marginEnd="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toBottomOf="@id/KnownCredits"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clGender"
            app:layout_constraintTop_toBottomOf="@id/clKnownCredits"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:text="@string/gender"
                android:textSize="16sp"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvGender"
                android:textSize="16sp"
                android:textColor="@color/textColorSecondary"
                android:layout_marginStart="@dimen/itemBetweenMarginMedium"
                android:layout_marginEnd="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toBottomOf="@id/gender"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clBirthday"
            app:layout_constraintTop_toBottomOf="@id/clGender"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birthday"
                android:text="@string/birthday"
                android:textSize="16sp"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvBirthday"
                android:textSize="16sp"
                android:textColor="@color/textColorSecondary"
                android:layout_marginStart="@dimen/itemBetweenMarginMedium"
                android:layout_marginEnd="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toBottomOf="@id/birthday"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clPlaceBirth"
            app:layout_constraintTop_toBottomOf="@id/clBirthday"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/placeBirth"
                android:text="@string/place_of_birth"
                android:textSize="16sp"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlaceBirth"
                android:textSize="16sp"
                android:textColor="@color/textColorSecondary"
                android:layout_marginStart="@dimen/itemBetweenMarginMedium"
                android:layout_marginEnd="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toBottomOf="@id/placeBirth"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clKnownAs"
            app:layout_constraintTop_toBottomOf="@id/clPlaceBirth"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/knownAs"
                android:text="@string/also_known_as"
                android:textSize="16sp"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKnownAs"
                android:textSize="16sp"
                android:textColor="@color/textColorSecondary"
                android:layout_marginStart="@dimen/itemBetweenMarginMedium"
                android:layout_marginEnd="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toBottomOf="@id/knownAs"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>